--- a/metabolights-webapps/.settings/org.eclipse.jdt.core.prefs
+++ b/metabolights-webapps/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,9 @@
-#Tue May 17 10:57:18 BST 2011
+#Thu Jun 16 12:42:13 BST 2011
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.6
