--- a/metabolights-webapps/src/main/webapp/resources/am_hibernate.cfg.xml.template
+++ b/metabolights-webapps/src/main/webapp/resources/am_hibernate.cfg.xml.template
@@ -22,6 +22,6 @@
 		<property name="show_sql">true</property> 
 		<!-- Drop and re-create the database schema on startup -->
 		<property name="hbm2ddl.auto">update</property>
-		<mapping resource="uk/ac/ebi/metabolights/repository/accessionmanager/StableId.hbm.xml"/>
+		<mapping resource="StableId.hbm.xml"/>
 	</session-factory>
 </hibernate-configuration>
