--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -137,7 +137,14 @@
 		<dependency>
 			<groupId>uk.ac.ebi.metabolights</groupId>
 			<artifactId>metabolights-uploader</artifactId>
-			<version>0.0.6-SNAPSHOT</version>
+			<version>0.0.8-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.metabolights</groupId>
+			<artifactId>metabolights-accessionmanager</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
