--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -35,7 +35,7 @@
     "globalFooter": true,
     "globalTemplate": {
         "title": "MetaboLights",
-        "cssType': "fluid",
+        "cssType": "fluid",
         "javascriptList": ["javascript/jquery-1.8.2.js",
         					"jquery-ui-1.9.0.custom.min.js"],
         "cssList": ["cssrl/jquery-ui-1.9.0.custom.min.css",
