--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 13/09/13 12:26
+  ~ Last modified: 23/09/13 10:12
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -39,6 +39,11 @@
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>isatab-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
         </dependency>
 
     </dependencies>
