--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 13/09/13 11:51
+  ~ Last modified: 02/10/13 14:17
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -31,5 +31,12 @@
         <module>metabolights-sampledb</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-dao</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
