--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 02/10/13 14:17
+  ~ Last modified: 03/10/13 10:40
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -45,7 +45,11 @@
             <artifactId>jni-inchi</artifactId>
             <version>0.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.isatools.plugins.metabolights</groupId>
+            <artifactId>metabolomics</artifactId>
+            <version>1.7.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
