--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -487,5 +487,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>7.0.19</version>
+        </dependency>
     </dependencies>
 </project>
