--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -111,11 +111,11 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-    <resource-ref>
-        <res-ref-name>jdbc/metabolights</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
+    <!--<resource-ref>-->
+        <!--<res-ref-name>jdbc/metabolights</res-ref-name>-->
+        <!--<res-type>javax.sql.DataSource</res-type>-->
+        <!--<res-auth>Container</res-auth>-->
+    <!--</resource-ref>-->
 
     <jsp-config>
         <jsp-property-group>
