--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -491,6 +491,7 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jdbc</artifactId>
             <version>7.0.19</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
