--- a/metabolights-referencelayer/importer/src/test/resources/log4j.properties
+++ b/metabolights-referencelayer/importer/src/test/resources/log4j.properties
@@ -20,10 +20,10 @@
 #
 
 # Root logger option
-log4j.rootLogger=INFO, stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %5p %-80m - %c:%L %n
+log4j.rootLogger=INFO
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%d %5p %-80m - %c:%L %n
 
 
 # ***** The Console Appender.
