--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -399,41 +399,41 @@
                 </exclusion>
             </exclusions>
         </dependency>
-		<dependency>
-			<groupId>uk.ac.ebi.rhea</groupId>
-			<artifactId>rhea-ws-domain</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>uk.ac.ebi.rhea</groupId>
-			<artifactId>rhea-ws-client</artifactId>
-			<version>2.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j</artifactId>
-                    <groupId>log4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-		<dependency>
-			<groupId>uk.ac.ebi.rhea</groupId>
-			<artifactId>rhea-domain</artifactId>
-			<version>1.7.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j</artifactId>
-                    <groupId>log4j</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>commons-collections</artifactId>
-                    <groupId>commons-collections</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>biobabel-citations</artifactId>
-                    <groupId>uk.ac.ebi.biobabel</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+		<!--<dependency>-->
+			<!--<groupId>uk.ac.ebi.rhea</groupId>-->
+			<!--<artifactId>rhea-ws-domain</artifactId>-->
+			<!--<version>1.0.2</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>uk.ac.ebi.rhea</groupId>-->
+			<!--<artifactId>rhea-ws-client</artifactId>-->
+			<!--<version>2.0.0</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>log4j</artifactId>-->
+                    <!--<groupId>log4j</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>uk.ac.ebi.rhea</groupId>-->
+			<!--<artifactId>rhea-domain</artifactId>-->
+			<!--<version>1.7.0</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>log4j</artifactId>-->
+                    <!--<groupId>log4j</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>commons-collections</artifactId>-->
+                    <!--<groupId>commons-collections</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>biobabel-citations</artifactId>-->
+                    <!--<groupId>uk.ac.ebi.biobabel</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
 
 		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
@@ -533,7 +533,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <dependency>
             <groupId>uk.ac.ebi.rcloud</groupId>
             <artifactId>rcloud-rpf</artifactId>
@@ -555,6 +554,10 @@
                     <artifactId>commons-pool</artifactId>
                     <groupId>commons-pool</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>ojdbc6</artifactId>
+                    <groupId>com.oracle</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -567,7 +570,5 @@
             <artifactId>logback-core</artifactId>
             <version>1.1.2</version>
         </dependency>
-
-
     </dependencies>
 </project>
