--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -4,6 +4,27 @@
   ~
   ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   ~
+  ~ Last modified: 10/2/14 12:07 PM
+  ~ Modified by:   kenneth
+  ~
+  ~ Copyright 2014 EMBL - European Bioinformatics Institute
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ Y
+  ~ ou may obtain a copy of the License at
+  ~
+  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+  -->
+
+<!--
+  ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
+  ~ Cheminformatics and Metabolism group
+  ~
+  ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+  ~
   ~ Last modified: 8/14/14 10:26 AM
   ~ Modified by:   conesa
   ~
@@ -187,6 +208,16 @@
             <groupId>oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>ojdbc6</artifactId>
+                    <groupId>oracle</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>ojdbc6</artifactId>
+                    <groupId>oracle</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.tiles</groupId>
@@ -530,6 +561,10 @@
                 <exclusion>
                     <artifactId>commons-logging</artifactId>
                     <groupId>commons-logging</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>ojdbc6</artifactId>
+                    <groupId>com.oracle</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
